--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,23 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/merchantrelationshipmanagement
 spring.datasource.username=root
 spring.datasource.password=root
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+#debug=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=rohit2154045@gmail.com
+spring.mail.password=dkkplcbwyasfayrb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.main.allow-bean-definition-overriding=true
+spring.mail.properties.mail.EnableSSL=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+#Spring Security
+#spring.security.user.name=rohit
+#spring.security.user.password=12345
